# lunch_game

./: README.md
client/: README.md  package.json
client/src/: App.tsx  setupProxy.js
client/src/components/: GameHistoryItem.tsx  Layout.tsx
client/src/configs/: api_config.tsx
client/src/context/: UserContext.tsx
client/src/mocks/: conversionRates.tsx
client/src/pages/: GameRoom.tsx  HistoryPage.tsx  HomePage.tsx
client/src/types/: enums.ts  types.ts
client/src/utils/: apiUtils.tsx  currencyUtils.tsx  userUtils.tsx  webSocketManager.ts
lunch_app/: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lunch_app/lunch_app/: app.py  database.py
lunch_app/lunch_app/modules/: connection_manager.py
lunch_app/lunch_app/modules/models/: model.py
lunch_app/lunch_app/modules/schemas/: messages.py  schema.py
lunch_app/lunch_app/modules/types/: constants.py  enums.py
lunch_app/lunch_app/router/: games.py  rooms.py  ws.py
